these is the massage

--- a/resource/index.html
+++ b/resource/index.html
@@ -10,6 +10,7 @@
     
     <div>
         <h1>WELCOME HEMANTH</h1>
+        <p>these s the massage from the new tailed</p>
     </div>
 </body>
 </html>
