these is the comit

--- a/resource/index.html
+++ b/resource/index.html
@@ -12,5 +12,8 @@
         <h1>WELCOME HEMANTH</h1>
         <p>these s the massage from the new tailed</p>
     </div>
+    <div>
+        <video src="excursion.mp4" rel="video.mp4" loop muted controls>
+    </div>
 </body>
 </html>
